Enhanced security configurations across multiple Kubernetes deployment files by adding security contexts to run containers as non-root users and prevent privilege escalation. Updated front-end Dockerfile to use a non-privileged NGINX image and adjusted health check settings. Used helm_release to install Azure Application Gateway for Containers instead of using app-gw which relies on ingress config files in k8s which represents hussle so I used the modern way

--- a/User/kubernetes/deployment.yaml
+++ b/User/kubernetes/deployment.yaml
@@ -18,6 +18,15 @@ spec:
         app: user
         app.kubernetes.io/component: user_profile
     spec:
+      # run the container as a non-root user to prevent privilege escalation
+      securityContext:
+        runAsUser: 1000
+        runAsGroup: 3000
+        fsGroup: 2000
+        # prevent the container from gaining additional privileges
+        allowPrivilegeEscalation: false
+        capabilities:
+          drop: ["ALL"]
       serviceAccountName: prod-sa # Use the Service Account linked to the Azure Identity
       containers:
         - name: user
